--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "unplugin-vue-components": "^0.19.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "3.0.0-5",
     "sass": "^1.51.0"
   }
 }
