--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
+    "@v2icons/utils": "^0.1.4",
+    "@vicons/ionicons5": "^0.12.0",
     "autoprefixer": "^10.4.7",
     "naive-ui": "^2.29.0",
     "nuxt": "3.0.0-rc.3",
