--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "3.0.0-5",
+    "@pinia/nuxt": "^0.1.9",
+    "pinia": "^2.0.14",
     "sass": "^1.51.0"
   }
 }
